[package]
name = "twprs-bouncer"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twprs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
egg-mode = "0.16"
egg-mode-extras = "0.2.1"
flate2 = "1"
futures = "0.3"
futures-locks = "0.7"
log = "0.4"
octocrab = "0.15"
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
simplelog = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twprs = { path = "../core" }
twprs-db = { path = "../db" }

[dev-dependencies]
proptest = "1.0"
