[package]
name = "twprs"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twprs"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { git = "https://github.com/apache/avro", features = ["snappy", "zstandard"] }
bzip2 = "0.4"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
egg-mode = "0.16"
egg-mode-extras = "0.2.1"
flate2 = "1"
futures = "0.3"
hyper = "0.14"
integer-encoding = "3"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
regex = "1.5.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
simplelog = "0.11"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "0.5"

[dev-dependencies]
proptest = "1.0"
