[package]
name = "twprs-db"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twprs"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = { git = "https://github.com/apache/avro", features = ["snappy"] }
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
log = "0.4"
rocksdb = "0.18"
serde_json = { version = "1", features = ["preserve_order"] }
simplelog = "0.11"
thiserror = "1"
twprs = { path = "../core" }

[dev-dependencies]
proptest = "1.0"
