[package]
name = "twprs-scraper"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twprs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
egg-mode = "0.16"
egg-mode-extras = "0.3.4"
futures = "0.3"
futures-locks = "0.7"
priority-queue = "1"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twprs = { path = "../core" }

[dev-dependencies]
proptest = "1.0"
